--- a/index.html
+++ b/index.html
@@ -405,8 +405,14 @@
         <div class="footer-form-box">
           <h3 class="section-title footer-text">Подпишитесь на розсылку</h3>
           <form class="form-box">
-            <input type="email" name="email" id="user-email" class="form-footer-input" />
-            <label for="user-email" class="form-footer-label"> E-mail</label>
+            <input
+              type="email"
+              name="email"
+              id="user-email"
+              class="form-footer-input"
+              placeholder="E-mail"
+            />
+            <label for="user-email"></label>
 
             <button type="submit" class="footer-button">
               Подписаться
