--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header-box">
       <div class="container header">
         <nav class="menu">
-          <a href="/" class="logo">Web<span class="studio">Studio</span></a>
+          <a href="/" class="logo">Web<span class="logo__text">Studio</span></a>
           <ul class="nav-link">
             <li class="item"><a href="" class="link current">Студия</a></li>
             <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
