--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <header class="header-box">
       <div class="container header">
         <nav class="menu">
-          <a href="/" class="logo">Web<span class="studio">Studio</span></a>
+          <a href="/" class="logo">Web<span class="logo__text">Studio</span></a>
           <ul class="nav-link">
             <li class="item"><a href="./index.html" class="link">Студия</a></li>
             <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
@@ -274,8 +274,14 @@
         <div class="footer-form-box">
           <h3 class="section-title footer-text">Подпишитесь на розсылку</h3>
           <form class="form-box">
-            <input type="email" name="email" id="user-email" class="form-footer-input" />
-            <label for="user-email" class="form-footer-label"> E-mail</label>
+            <input
+              type="email"
+              name="email"
+              id="user-email"
+              class="form-footer-input"
+              placeholder="E-mail"
+            />
+            <label for="user-email"></label>
 
             <button type="submit" class="footer-button">
               Подписаться
